[package]
name = "with-tailwind"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "tuono"
path = ".tuono/main.rs"

[dependencies]
tuono_lib = "0.19.7"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
